@@ -1,3 +1,4 @@
+ feature: added push_message_buffer_length setting, which sets push_message_max_buffer_length and push_message_min_buffer_length at once.
  fix: publisher channel info text/json response now uses double quotes instead of single.
  fix: interprocess messages were not removed from shared memory correctly, causing weird errors
 0.68 (Nov. 5 2009)
